test/spec/func.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/func.wast
(;; STDOUT ;;;
assert_invalid error:
  out/third_party/testsuite/func.wast:315:11: type mismatch at function. got i32, expected i64
  (module (func $type-local-num-vs-num (result i64) (local i32) (get_local 0)))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/func.wast:319:53: type mismatch at i32.eqz. got f32, expected i32
  (module (func $type-local-num-vs-num (local f32) (i32.eqz (get_local 0))))
                                                    ^^^^^^^
assert_invalid error:
  out/third_party/testsuite/func.wast:319:11: type stack at end of function is 1. expected 0
  (module (func $type-local-num-vs-num (local f32) (i32.eqz (get_local 0))))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/func.wast:323:57: type mismatch at f64.neg. got i64, expected f64
  (module (func $type-local-num-vs-num (local f64 i64) (f64.neg (get_local 1))))
                                                        ^^^^^^^
assert_invalid error:
  out/third_party/testsuite/func.wast:323:11: type stack at end of function is 1. expected 0
  (module (func $type-local-num-vs-num (local f64 i64) (f64.neg (get_local 1))))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/func.wast:331:11: type mismatch at function. got i32, expected i64
  (module (func $type-param-num-vs-num (param i32) (result i64) (get_local 0)))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/func.wast:335:53: type mismatch at i32.eqz. got f32, expected i32
  (module (func $type-param-num-vs-num (param f32) (i32.eqz (get_local 0))))
                                                    ^^^^^^^
assert_invalid error:
  out/third_party/testsuite/func.wast:335:11: type stack at end of function is 1. expected 0
  (module (func $type-param-num-vs-num (param f32) (i32.eqz (get_local 0))))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/func.wast:339:57: type mismatch at f64.neg. got i64, expected f64
  (module (func $type-param-num-vs-num (param f64 i64) (f64.neg (get_local 1))))
                                                        ^^^^^^^
assert_invalid error:
  out/third_party/testsuite/func.wast:339:11: type stack at end of function is 1. expected 0
  (module (func $type-param-num-vs-num (param f64 i64) (f64.neg (get_local 1))))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/func.wast:347:11: multiple result values not currently supported.
  (module (func $type-multiple-result (result i32 i32) (unreachable)))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/func.wast:353:5: multiple result values not currently supported.
    (func $type-multiple-result (type 0) (unreachable))
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/func.wast:360:11: type stack size too small at function. got 0, expected at least 1
  (module (func $type-empty-i32 (result i32)))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/func.wast:360:11: type stack at end of function is 0. expected 1
  (module (func $type-empty-i32 (result i32)))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/func.wast:364:11: type stack size too small at function. got 0, expected at least 1
  (module (func $type-empty-i64 (result i64)))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/func.wast:364:11: type stack at end of function is 0. expected 1
  (module (func $type-empty-i64 (result i64)))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/func.wast:368:11: type stack size too small at function. got 0, expected at least 1
  (module (func $type-empty-f32 (result f32)))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/func.wast:368:11: type stack at end of function is 0. expected 1
  (module (func $type-empty-f32 (result f32)))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/func.wast:372:11: type stack size too small at function. got 0, expected at least 1
  (module (func $type-empty-f64 (result f64)))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/func.wast:372:11: type stack at end of function is 0. expected 1
  (module (func $type-empty-f64 (result f64)))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/func.wast:377:11: type stack size too small at function. got 0, expected at least 1
  (module (func $type-value-void-vs-num (result i32)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/func.wast:377:11: type stack at end of function is 0. expected 1
  (module (func $type-value-void-vs-num (result i32)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/func.wast:383:11: type stack at end of function is 1. expected 0
  (module (func $type-value-num-vs-void
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/func.wast:389:11: type mismatch at function. got f32, expected i32
  (module (func $type-value-num-vs-num (result i32)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/func.wast:397:6: type stack size too small at return. got 0, expected at least 1
    (return)
     ^^^^^^
assert_invalid error:
  out/third_party/testsuite/func.wast:403:6: type stack size too small at return. got 0, expected at least 1
    (return (nop))
     ^^^^^^
assert_invalid error:
  out/third_party/testsuite/func.wast:409:6: type mismatch at return. got i64, expected i32
    (return (i64.const 0))
     ^^^^^^
assert_invalid error:
  out/third_party/testsuite/func.wast:416:6: type stack size too small at return. got 0, expected at least 1
    (return) (i32.const 1)
     ^^^^^^
assert_invalid error:
  out/third_party/testsuite/func.wast:422:6: type stack size too small at return. got 0, expected at least 1
    (return (nop)) (i32.const 1)
     ^^^^^^
assert_invalid error:
  out/third_party/testsuite/func.wast:428:6: type mismatch at return. got i64, expected i32
    (return (i64.const 1)) (i32.const 1)
     ^^^^^^
assert_invalid error:
  out/third_party/testsuite/func.wast:434:6: type mismatch at return. got i64, expected i32
    (return (i64.const 1)) (return (i32.const 1))
     ^^^^^^
assert_invalid error:
  out/third_party/testsuite/func.wast:441:6: type stack size too small at br value. got 0, expected at least 1
    (br 0)
     ^^^^
assert_invalid error:
  out/third_party/testsuite/func.wast:447:6: type mismatch at br value. got f32, expected i32
    (br 0 (f32.const 0))
     ^^^^
assert_invalid error:
  out/third_party/testsuite/func.wast:453:6: type stack size too small at br value. got 0, expected at least 1
    (br 0) (i32.const 1)
     ^^^^
assert_invalid error:
  out/third_party/testsuite/func.wast:459:6: type mismatch at br value. got i64, expected i32
    (br 0 (i64.const 1)) (i32.const 1)
     ^^^^
assert_invalid error:
  out/third_party/testsuite/func.wast:465:6: type mismatch at br value. got i64, expected i32
    (br 0 (i64.const 1)) (br 0 (i32.const 1))
     ^^^^
assert_invalid error:
  out/third_party/testsuite/func.wast:472:13: type stack size too small at br value. got 0, expected at least 1
    (block (br 1)) (br 0 (i32.const 1))
            ^^^^
assert_invalid error:
  out/third_party/testsuite/func.wast:478:13: type stack size too small at br value. got 0, expected at least 1
    (block (br 1 (nop))) (br 0 (i32.const 1))
            ^^^^
assert_invalid error:
  out/third_party/testsuite/func.wast:484:13: type mismatch at br value. got i64, expected i32
    (block (br 1 (i64.const 1))) (br 0 (i32.const 1))
            ^^^^
out/third_party/testsuite/func.wast:315: assert_invalid passed:
  error: type mismatch in implicit return, expected i64 but got i32.
  error: @0x0000001d: end_function_body callback failed
out/third_party/testsuite/func.wast:319: assert_invalid passed:
  error: type mismatch in i32.eqz, expected i32 but got f32.
  error: @0x0000001c: on_convert_expr callback failed
out/third_party/testsuite/func.wast:323: assert_invalid passed:
  error: type mismatch in f64.neg, expected f64 but got i64.
  error: @0x0000001e: on_unary_expr callback failed
out/third_party/testsuite/func.wast:331: assert_invalid passed:
  error: type mismatch in implicit return, expected i64 but got i32.
  error: @0x0000001c: end_function_body callback failed
out/third_party/testsuite/func.wast:335: assert_invalid passed:
  error: type mismatch in i32.eqz, expected i32 but got f32.
  error: @0x0000001b: on_convert_expr callback failed
out/third_party/testsuite/func.wast:339: assert_invalid passed:
  error: type mismatch in f64.neg, expected f64 but got i64.
  error: @0x0000001c: on_unary_expr callback failed
out/third_party/testsuite/func.wast:347: assert_invalid passed:
  error: @0x0000000e: result count must be 0 or 1
out/third_party/testsuite/func.wast:351: assert_invalid passed:
  error: @0x0000000e: result count must be 0 or 1
out/third_party/testsuite/func.wast:360: assert_invalid passed:
  error: type stack size too small at implicit return. got 0, expected at least 1
  error: @0x00000019: end_function_body callback failed
out/third_party/testsuite/func.wast:364: assert_invalid passed:
  error: type stack size too small at implicit return. got 0, expected at least 1
  error: @0x00000019: end_function_body callback failed
out/third_party/testsuite/func.wast:368: assert_invalid passed:
  error: type stack size too small at implicit return. got 0, expected at least 1
  error: @0x00000019: end_function_body callback failed
out/third_party/testsuite/func.wast:372: assert_invalid passed:
  error: type stack size too small at implicit return. got 0, expected at least 1
  error: @0x00000019: end_function_body callback failed
out/third_party/testsuite/func.wast:377: assert_invalid passed:
  error: type stack size too small at implicit return. got 0, expected at least 1
  error: @0x0000001a: end_function_body callback failed
out/third_party/testsuite/func.wast:383: assert_invalid passed:
  error: type stack at end of func is 1. expected 0
  error: @0x0000001a: end_function_body callback failed
out/third_party/testsuite/func.wast:389: assert_invalid passed:
  error: type mismatch in implicit return, expected i32 but got f32.
  error: @0x0000001e: end_function_body callback failed
out/third_party/testsuite/func.wast:396: assert_invalid passed:
  error: type stack size too small at return. got 0, expected at least 1
  error: @0x00000019: on_return_expr callback failed
out/third_party/testsuite/func.wast:402: assert_invalid passed:
  error: type stack size too small at return. got 0, expected at least 1
  error: @0x0000001a: on_return_expr callback failed
out/third_party/testsuite/func.wast:408: assert_invalid passed:
  error: type mismatch in return, expected i32 but got i64.
  error: @0x0000001b: on_return_expr callback failed
out/third_party/testsuite/func.wast:415: assert_invalid passed:
  error: type stack size too small at return. got 0, expected at least 1
  error: @0x00000019: on_return_expr callback failed
out/third_party/testsuite/func.wast:421: assert_invalid passed:
  error: type stack size too small at return. got 0, expected at least 1
  error: @0x0000001a: on_return_expr callback failed
out/third_party/testsuite/func.wast:427: assert_invalid passed:
  error: type mismatch in return, expected i32 but got i64.
  error: @0x0000001b: on_return_expr callback failed
out/third_party/testsuite/func.wast:433: assert_invalid passed:
  error: type mismatch in return, expected i32 but got i64.
  error: @0x0000001b: on_return_expr callback failed
out/third_party/testsuite/func.wast:440: assert_invalid passed:
  error: type stack size too small at br. got 0, expected at least 1
  error: @0x0000001a: on_br_expr callback failed
out/third_party/testsuite/func.wast:446: assert_invalid passed:
  error: type mismatch in br, expected i32 but got f32.
  error: @0x0000001f: on_br_expr callback failed
out/third_party/testsuite/func.wast:452: assert_invalid passed:
  error: type stack size too small at br. got 0, expected at least 1
  error: @0x0000001a: on_br_expr callback failed
out/third_party/testsuite/func.wast:458: assert_invalid passed:
  error: type mismatch in br, expected i32 but got i64.
  error: @0x0000001c: on_br_expr callback failed
out/third_party/testsuite/func.wast:464: assert_invalid passed:
  error: type mismatch in br, expected i32 but got i64.
  error: @0x0000001c: on_br_expr callback failed
out/third_party/testsuite/func.wast:471: assert_invalid passed:
  error: type stack size too small at br. got 0, expected at least 1
  error: @0x0000001c: on_br_expr callback failed
out/third_party/testsuite/func.wast:477: assert_invalid passed:
  error: type stack size too small at br. got 0, expected at least 1
  error: @0x0000001d: on_br_expr callback failed
out/third_party/testsuite/func.wast:483: assert_invalid passed:
  error: type mismatch in br, expected i32 but got i64.
  error: @0x0000001e: on_br_expr callback failed
96/96 tests passed.
;;; STDOUT ;;)
